# starlette_boot

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml  publish.yml
starlette_boot/: __main__.py  context.py  main.py
starlette_boot/components/alembic/: alembic.ini
starlette_boot/components/alembic/alembic/: env.py
starlette_boot/components/healthcheck/: plugin.py
starlette_boot/components/healthcheck/{{cookiecutter.project_slug}}/: healhcheck.py
starlette_boot/components/metrics/: plugin.py
starlette_boot/components/metrics/{{cookiecutter.project_slug}}/: metrics.py
starlette_boot/components/project/hooks/: post_gen_project.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  manage.py  pyproject.toml  setup.cfg
starlette_boot/components/project/{{cookiecutter.project_slug}}/assets/: build.js  package.json  tailwind.config.js  tsconfig.json
starlette_boot/components/project/{{cookiecutter.project_slug}}/scripts/: docker-run.sh  healthcheck.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/tests/: conftest.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: .gitignore  __main__.py  console.py  main.py  views.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/: console.py  http.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/templating/: __init__.py  factories.py  library.py  processors.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: errors.py  middleware.py  routes.py  sentry.py  settings.py
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/locales/: messages.pot
starlette_boot/components/project/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html  index.html
